<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEB5AF"
        android:orientation="vertical"
        tools:context=".NewTask">

    <TextView
            android:text="@string/newTask"
            android:layout_width="176dp"
            android:layout_height="37dp"
            android:textColor="#ffff"
            android:id="@+id/tv1" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.497" app:layout_constraintTop_toTopOf="parent"
            android:textSize="30sp" android:layout_marginBottom="8dp"
            android:textStyle="bold" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.068"/>
    <Button
            android:text="@string/addBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/AddTaskBt"
            android:background="#F5665B"
            android:textColor="#ffff"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.892"
            android:onClick="addDatos"/>
    <Button
            android:text="@string/addBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#F5665B"
            android:textColor="#ffff"
            android:id="@+id/back"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.13"
            android:onClick="back"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:id="@+id/titleNewTask" app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="108dp"
            app:layout_constraintHorizontal_bias="0.335" android:hint="@string/titleNewTask"/>
    <EditText
            android:layout_width="239dp"
            android:layout_height="135dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:id="@+id/descripNewTask" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/titleNewTask"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/dateNewTask"
            app:layout_constraintHorizontal_bias="0.416" android:hint="@string/descNewTask"
            app:layout_constraintVertical_bias="0.238"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:id="@+id/dateNewTask" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.395"
            android:hint="@string/dateTask" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/titleNewTask"
            app:layout_constraintVertical_bias="0.388"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:textColor="#ffff"
            android:textColorHint="#ffff"
            android:id="@+id/timeNewTask"
            app:layout_constraintTop_toTopOf="@+id/descripNewTask" android:layout_marginTop="240dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.395"
            app:layout_constraintVertical_bias="0.197" android:hint="@string/timeTask"/>

</androidx.constraintlayout.widget.ConstraintLayout>